--- a/templates/qtGUI/trunk/icons.qrc
+++ b/templates/qtGUI/trunk/icons.qrc
@@ -1,7 +1,7 @@
 <RCC>
   <qresource prefix="icons">
-    <file>res/root.ico</file>
-    <file>res/root16x16.xpm</file>
-    <file>res/root32x32.xpm</file>
+    <file>res/$(ProjectName).ico</file>
+    <file>res/$(ProjectName)16x16.xpm</file>
+    <file>res/$(ProjectName)32x32.xpm</file>
   </qresource>
 </RCC>
