--- a/templates/qtGUI/trunk/rootFrame.ui
+++ b/templates/qtGUI/trunk/rootFrame.ui
@@ -17,7 +17,7 @@
    <string>$(ProjectName)</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="icons.qrc">
+   <iconset resource="resources.qrc">
     <normaloff>:/icons/res/$(ProjectName).ico</normaloff>:/icons/res/$(ProjectName).ico</iconset>
   </property>
   <widget class="QWidget" name="m_centralWidget">
