--- a/templates/qtGUI/trunk/rootFrame.ui
+++ b/templates/qtGUI/trunk/rootFrame.ui
@@ -17,7 +17,7 @@
    <string>$(ProjectName)</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
+   <iconset>
     <normaloff>:/icons/res/$(ProjectName).ico</normaloff>:/icons/res/$(ProjectName).ico</iconset>
   </property>
   <widget class="QWidget" name="m_centralWidget">
@@ -37,7 +37,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>461</width>
+     <width>600</width>
      <height>25</height>
     </rect>
    </property>
@@ -70,7 +70,7 @@
  </widget>
  <layoutdefault spacing="5" margin="5"/>
  <resources>
-  <include location="icons.qrc"/>
+  <include location="resources.qrc"/>
  </resources>
  <connections>
   <connection>
